Stop notifications breaking out of container if their contents are too wide (images & wistia, for example)(

--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -68,6 +68,7 @@
     max-height: 75vh;
     overflow-x: hidden;
     overflow-y: scroll;
+    width: 100%;
 }
 
 .notifications__header {
